# bananas

./: .gitignore  BananaLisp.cabal  Bananas.cabal  README.md  bananas.txt  input.blisp  input.nana  stack.yaml
src/: BananaLisp.lhs  Bananas.hs  Module.hs  Operations.hs  Parser.hs
