name:                BananaLisp
version:             0.1.0.0
homepage:            https://github.com/willishoke/bananalisp.git 
license:             MIT
license-file:        LICENSE
author:              Willis Hoke
maintainer:          willishoke@gmail.com
copyright:           2020 Willis Hoke
category:            Simulation 
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable banana
  hs-source-dirs:      src
  main-is:             Operations.hs
  default-language:    Haskell2010
  ghc-options:        -O2
  build-depends:       base >= 4.7 && < 5
