name:                Bananas
version:             0.1.0.0
homepage:            https://github.com/willishoke/bananas.git 
license:             MIT
license-file:        LICENSE
author:              Willis Hoke
maintainer:          willishoke@gmail.com
copyright:           2020 Willis Hoke
category:            Simulation 
build-type:          Simple
cabal-version:       >=1.10

executable banana
  exposed-modules:     Module Parser
  hs-source-dirs:      src
  main-is:             Bananas.hs
  default-language:    Haskell2010
  ghc-options:        -O2, -fwarn-incomplete-patterns
  build-depends:       base >= 4.7 && < 5,
                       WAVE == 0.1.6,
                       algebraic-graphs,
                       mtl,
                       containers,
                       vector,
                       attoparsec,
                       text,
                       lens
